# Redo

./: README.md  conftest.py  docs.md  license.txt  main.py  pyproject.toml  status-codes.txt
modules/: inspector.py  placeholders.py  preflight.py  project.py  runner.py  scanner.py  storage.py  templates.py  ui.py  update_checker.py
tests/: conftest.py  test_cli.py  test_inspector.py  test_packaging.py  test_placeholders.py  test_preflight.py  test_project.py  test_runner.py  test_scanner.py  test_storage.py  test_templates.py  test_ui.py  test_update_checker.py
