[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redo-workflows"
version = "0.1.0"
description = "Bookmarks for terminal workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
redo = "main:app"

[tool.setuptools]
py-modules = ["main"]
packages = ["modules"]
