[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redo-cli"
version = "1.1.5"
description = "Bookmarks for terminal workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vibeslayer-code" }]
keywords = ["cli", "terminal", "workflow", "automation", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.urls]
Homepage = "https://github.com/VibeSlayer-code/Redo"
Repository = "https://github.com/VibeSlayer-code/Redo"
Issues = "https://github.com/VibeSlayer-code/Redo/issues"

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "twine",
]

[project.scripts]
redo = "main:app"

[tool.setuptools]
py-modules = ["main"]
packages = ["modules"]
